--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body class="bg-sky-100">
-    <main class="container mx-auto mt-14 px-5">
+    <main class="container mx-auto mt-14 px-5 max-w-7xl">
       <h1 class="text-center text-4xl mb-10 font-sans text-amber-600 font-bold">FORECASTER</h1>
       <%= yield %>
     </main>
